fixed alignment in skills grid layout

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -130,7 +130,7 @@
           li {
             width: 74px;
             height: 74px;
-            margin: 0 0.2rem 0.5rem 0.2rem;
+            margin: 0.25rem;
 
             div {
               display: flex;
