--- a/scss/main.scss
+++ b/scss/main.scss
@@ -247,7 +247,7 @@ img {
         display: inline-block;
         overflow: hidden;
         background-color: #fff;
-        margin: 0 0.5rem 1rem 0.5rem;
+        margin: 0.5rem;
         border: solid 7px $dark-color;
         line-height: 150px;
 
